--- a/42.display.html
+++ b/42.display.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1
+        {
+            background-color: blueviolet;
+            display: inline;
+        }
+        h2{
+            background-color: brown;
+            display: inline-block;
+        }
+        i
+        {
+            background-color: darkgreen;
+            display: block;
+        }
+        em{
+            background-color: black;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <h1>this is heading</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aperiam ipsum totam officiis distinctio ipsam labore quod beatae, qui repudiandae itaque incidunt tenetur corporis, cum alias recusandae quisquam aliquid esse deleniti. Adipisci tempore nostrum vero tenetur odio error illo, asperiores inventore ea corrupti omnis quaerat expedita. Ad dignissimos expedita ducimus facilis dicta eum quam minus consectetur accusantium aspernatur unde ratione voluptas, totam repudiandae officiis hic sint maiores nesciunt libero cupiditate sit inventore, doloribus, fugit ea? Excepturi voluptatem ratione consectetur pariatur, nam quasi quod id fuga voluptate cumque accusantium ipsa officia repudiandae velit sunt nisi soluta rem mollitia ex. Explicabo, fugiat?</p>
+    <h2>block element</h2>
+    <i>inline element</i>
+    <em>in element</em>
+
 </body>
 </html>
