--- a/42.block,inline element.html
+++ b/42.block,inline element.html
@@ -18,6 +18,7 @@
         {
             background-color: darkgreen;
             display: block;
+            visibility: visible;
         }
         em{
             background-color: black;
