--- a/43.link.html
+++ b/43.link.html
@@ -5,11 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        
+        a:link
+        {
+            color: blueviolet;
+        }
+        a:visited
+        {
+            color: chocolate;
+        }
+        a:hover{
+            color:green;
+        }
+        a:active
+        {
+            color:brown
+        }
+        a:focus
+       {
+        color:black;
+       } 
     </style>
 </head>
 <body>
-    <a href="#">google link</a>
+    <a href="#########">google </a>
     
 </body>
 </html>
